blue-green/spinnaker-pipeline-test/manifest.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: kanata-test
  namespace: test
  annotations:
    cloud.google.com/neg: '{"ingress": true}'
spec:
  type: NodePort
  ports:
    - port: 8080
      protocol: TCP
      targetPort: 8080
  selector:
    eventId: ${ trigger.eventId }

---
apiVersion: v1
kind: Service
metadata:
  name: kanata
  namespace: test
  annotations:
    cloud.google.com/neg: '{"ingress": true}'
spec:
  type: NodePort
  ports:
    - port: 8080
      protocol: TCP
      targetPort: 8080
  selector:
    app: kanata
